fix tootip z-index

--- a/examples/example.css
+++ b/examples/example.css
@@ -82,6 +82,7 @@ body {
 }
 
 .hwschematic-tooltip {
+    z-index: 2;
 	background: cornsilk;
 	border: 1px solid black;
 	border-radius: 5px;
